* bugfix: search types selector in headlet absolute positioning overlapped input field with limited rights

--- a/asset/css/headlet-quicksearch.css
+++ b/asset/css/headlet-quicksearch.css
@@ -30,9 +30,6 @@
 	margin-top:3px;
 	width:198px;
 	margin-left:-3px;
-	-webkit-box-shadow:2px 2px 7px #999;
-	-moz-box-shadow:2px 2px 7px #999;
-	box-shadow:2px 2px 7px #999;
 }
 	#todoyusearchheadletquicksearch-modes ul {
 		width:198px;
